test/fails/bad_parsing/constants3.lgl
void main() {
    print [0.1, 1.0 1.2];
}
